# cmput350

./: .gitignore  CMakeLists.txt  README.md  readme.txt  sc2bot.sln  sc2bot.vcxproj  sc2bot.vcxproj.filters  setup.md
cmake/: FindSC2Api.cmake
src/: CMakeLists.txt  bot.cpp  bot.h  bot.hpp  build_tanks.cpp  early_rush.cpp  game_start.cpp  main.cpp  main_state.cpp  state.cpp  state.h  util.cpp  util.h
